--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="assets/img/Bild1.jpeg" alt="Kitchen">
 
                 <div>
-                    <h2>Kitchen</h2>
+                    <h2>Bathroom</h2>
                 </div>
 
             </article>
@@ -48,7 +48,7 @@
             <article>
                 <img src="assets/img/Bild2.jpeg" alt="Bath">
                 <div>
-                    <h2>Bathroom</h2>
+                    <h2>Lighting</h2>
                 </div>
 
             </article>
@@ -56,7 +56,7 @@
             <article>
                 <img src="assets/img/Bild3.jpeg" alt="Lingt">
                 <div>
-                    <h2>Lighting</h2>
+                    <h2>Relaxing</h2>
                 </div>
             </article>
         </section>
